tests/ui/cilk/cilk_spawn_borrow_lifetime_simple.stderr
error[E0499]: cannot borrow `x` as mutable more than once at a time
  --> $DIR/cilk_spawn_borrow_lifetime_simple.rs:17:5
   |
LL |         let y = &mut x;
   |                 ------ first mutable borrow occurs here
...
LL |     x.push(10);
   |     ^ second mutable borrow occurs here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0499`.
